:heavy_plus_sign: added lamindb dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 dynamic = ["version", "description"]
 dependencies = [
     "nbproject",
+    "lamindb>=0.29.0"
 ]
 
 [project.urls]
