--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install pip and nox
         run: |
           python -m pip install --upgrade pip
-          pip install nox
+          pip install laminci
       - name: Lint
         run: |
           nox -s lint
