--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,8 +48,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install laminci
       - name: Lint
+        if: matrix.python-version == '3.9'
         run: |
-          nox -s lint
+          nox -s lint --python ${{ matrix.python-version }}
       - name: Build
         run: |
           nox -s build --python ${{ matrix.python-version }}
