--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,10 +46,11 @@ jobs:
       - name: Install pip and nox
         run: |
           python -m pip install --upgrade pip
-          pip install nox
+          pip install laminci
       - name: Lint
+        if: matrix.python-version == '3.9'
         run: |
-          nox -s lint
+          nox -s lint --python ${{ matrix.python-version }}
       - name: Build
         run: |
           nox -s build --python ${{ matrix.python-version }}
@@ -58,19 +59,6 @@ jobs:
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-      - name: Read lamin-project.yaml
-        if: matrix.python-version == '3.9'
-        id: lamin-project
-        uses: CumulusDS/get-yaml-paths-action@v0.1.0
-        with:
-          file: lamin-project.yaml
-          project_slug: project_slug
-      - name: Change base URL to project-slug
-        if: github.event_name == 'push' && matrix.python-version == '3.9'
-        run: |
-          mv _build/html _build/${{ steps.lamin-project.outputs.project_slug }}
-          mkdir -p _build/html/docs
-          mv _build/${{ steps.lamin-project.outputs.project_slug }} _build/html/docs
       - name: Deploy docs
         if: matrix.python-version == '3.9'
         id: netlify
