:heavy_plus_sign: added torchmetrics and pytorch lightning dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "lamindb>=0.29.0",
     "torch",
     "torchvision",
+    "torchmetrics",
+    "pytorch-lightning",
     "Pillow"
 ]
 
