📝  Add MNIST notebooks (#1)
* :memo: added MNIST notebooks

* :heavy_plus_sign: added lamindb dependency

* :heavy_plus_sign: added external dependencies

* :memo: added introductory notebook

* :memo: updated notebooks to observe new structure with introduction

* :art: updated calls to ln.DFolder and cleaned up notebooks

* :bento: ingested a subset of the files locally

* :bento: set training instance to remote instance (full 100 image dataset)

* :memo: initialized notebooks

* :bento: pulled all assets from mnist dataset locally

* :bento: set local instance as training instance

* :heavy_plus_sign: added torchmetrics and pytorch lightning dependencies

* :fire: deleted quickstart notebook

* :bricks: commented out coverage run in noxfile

---------

Co-authored-by: Alex Wolf <f.alexander.wolf@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,12 @@ readme = "README.md"
 dynamic = ["version", "description"]
 dependencies = [
     "nbproject",
+    "lamindb>=0.29.0",
+    "torch",
+    "torchvision",
+    "torchmetrics",
+    "pytorch-lightning",
+    "Pillow"
 ]
 
 [project.urls]
