:truck: Replace lndb with lamin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dynamic = ["version", "description"]
 dependencies = [
     "nbproject",
     "lamindb>=0.29.0",
+    "lamin",
     "torch",
     "torchvision",
     "torchmetrics",
