--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,9 @@ jobs:
           key: pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
       - name: Install pip and nox
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install -U pip
           pip install laminci>=0.2.5
+          pip install -U lamindb
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v1
         with:
