--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,11 @@ jobs:
           path: lndocs
           ref: main
       - name: Setup Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: "pip"
+          cache-dependency-path: ".github/workflows/build.yml" # See dependencies below
       - name: Cache nox
         uses: actions/cache@v3
         with:
@@ -43,11 +45,28 @@ jobs:
         with:
           path: ~/.cache/pre-commit
           key: pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
-      - name: Install pip and nox
+      - name: Cache postgres
+        id: cache-postgres
+        uses: actions/cache@v3
+        with:
+          path: ~/postgres.tar
+          key: cache-postgres-0
+      - name: Cache postgres miss
+        if: steps.cache-postgres.outputs.cache-hit != 'true'
+        run: docker pull postgres:latest && docker image save postgres:latest --output ~/postgres.tar
+      - name: Cache postgres use
+        if: steps.cache-postgres.outputs.cache-hit == 'true'
+        run: docker image load --input ~/postgres.tar
+      - name: Install Python dependencies
         run: |
           python -m pip install -U pip
-          pip install laminci>=0.2.5
+          pip install -U laminci
           pip install -U lamindb
+      - name: Install apt-get dependencies
+        run: |
+          sudo apt-get -y install graphviz
+          sudo apt-get install sqlite3-tools=3.37.2-2
+          sudo apt-get install libpq-dev
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v1
         with:
